fix: unified timezone in both github workflow and index.js; avoid runner congestion (#1)
- changed timezone in index.js to Asia/Hong_Kong

- set cron to an odd time to avoid runner congestion

--- a/.github/workflows/on_daily.yml
+++ b/.github/workflows/on_daily.yml
@@ -2,7 +2,7 @@ name: on daily
 
 on:
   schedule:
-    - cron: "0 19 * * *"
+    - cron: "23 13 * * *" # UTC, = 21:30 UTC+8
 
 jobs:
   generate_burndown_chart:
