--- a/.github/workflows/on_manual_trigger.yml
+++ b/.github/workflows/on_manual_trigger.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           force: true
+          branch: ${{ github.ref }}
       - name: Output current date
         id: date
         run: echo "::set-output name=date::$(TZ=Asia/Hong_Kong date +'%Y-%m-%d')"
