--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "loglevel": "^1.7.1",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34"
   }
 }
