--- a/.github/workflows/on_daily.yml
+++ b/.github/workflows/on_daily.yml
@@ -19,7 +19,7 @@ jobs:
           NOTION_DB_SPRINT_SUMMARY: 200a4068c0ba406b8bcefa003f5c2fda
           NOTION_DB_DAILY_SUMMARY: 534fa46ea72e4bcabee09db941d59346
           NOTION_PROPERTY_SPRINT: Sprint
-          NOTION_PROPERTY_ESTIMATE: Story points raw number
+          NOTION_PROPERTY_ESTIMATE: Story points
           NOTION_PROPERTY_PATTERN_STATUS_INCLUDE: "^(Tasks)|(In Progress)$"
       - name: Commit burndown chart
         run: |
