--- a/action.yml
+++ b/action.yml
@@ -22,8 +22,11 @@ inputs:
   NOTION_PROPERTY_ESTIMATE:
     description: "Name of the property with the estimate"
     required: true
-  NOTION_PROPERTY_PATTERN_STATUS_INCLUDE:
+  NOTION_PROPERTY_PATTERN_ONGOING_STATUS_INCLUDE:
     description: "Regex of the statuses of stories which are done"
+    required: true
+  NOTION_PROPERTY_PATTERN_STATUS_INCLUDE: 
+    description: "Regex of the statuses of stories from which to count in a sprint"
     required: true
   INCLUDE_WEEKENDS:
     description: "True if weekends should be included in the chart, false otherwise."
